Fix grid alignment on browser resize by switching to CSS Grid
Amp-Thread-ID: https://ampcode.com/threads/T-019c875f-27de-77ee-8432-aabb0c309cfe

--- a/main.css
+++ b/main.css
@@ -89,18 +89,16 @@ body {
 }
 
 .cell-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  display: grid;
   width: 50vh;
   height: 50vh;
   margin: auto;
-  gap: 0;
   box-sizing: border-box;
 }
 
 .cell {
   border: 1px solid #333;
+  box-sizing: border-box;
 }
 footer {
   text-align: center;
